fix footer alignment right

--- a/src/style.scss
+++ b/src/style.scss
@@ -361,7 +361,7 @@ body{
 		font-size: 10px;
 		display: flex;
 		align-items: center;
-		justify-content: right;
+		justify-content: flex-end;
 		background: $bg-card;
 		padding: 10px;
 		a {
